# StepanPredprof

./: .gitignore  README.md  data.db  pyproject.toml
app/: main.py
app/client/app/: main_window.py
app/client/app/ui/: main_widget_ui.py
app/core/dependencies/: fastapi.py
app/lib/: database.py
app/lib/logic/: find_pics.py  get_map.py
app/lib/schemas/: coords.py  tiles.py
app/lib/utils/: parser.py  parser_coords.py  parser_map.py
app/routers/: router.py
app/tests/: test_api.py
client/: main.py
client/app/: main_window.py
client/app/widgets/: main_widget.py
client/models/: __init__.py
client/settings/: __init__.py  excepthook_config.py  logging_config.py
