[project]
name = "Stepan"
version = "0.1.0"
description = ""
authors = [
    {name = "VladG",email = "gricenkovlad007@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "uvicorn[standart] (>=0.34.0,<0.35.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "pyqt6 (>=6.8.1,<7.0.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "qt-material (>=2.14,<3.0)"
]

[tool.black]
line-length = 120
target-version = ['py312']

[tool.isort]
line_length = 120
atomic = true
include_trailing_comma = true
use_parentheses = true
profile = "black"
lines_before_imports = 1
lines_after_imports = 2
combine_as_imports = true
multi_line_output = 3

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
